# google-mcp-server

./: .gitignore  Makefile  SECURITY_AUDIT_2026-02-19.md  main.go
.github/workflows/: ci.yml
accounts/: handler.go
auth/: account_manager.go  oauth.go  oauth_server.go  scope_checker.go
calendar/: multi_account.go  multi_handler.go
config/: config.go
docs/: client.go  multi_account.go  tools.go
drive/: client.go  multi_account.go  tools.go
gmail/: client.go  multi_account.go  tools.go
python/: README.md  pyproject.toml
python/google_mcp/: __init__.py  api.py  client.py
server/: mcp.go
sheets/: client.go  multi_account.go  tools.go
slides/: client.go  tools.go  tools_test.go
tasks/: client.go  multi_handler.go  tasks_test.go
